# IronsBot

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-release.yml
ironsbot/plugins/db_sync/: __init__.py  config.py  manager.py
ironsbot/plugins/get_seer_info/: __init__.py  command.md  config.py  db.py  group.py  prompt.py  render.py
ironsbot/plugins/get_seer_info/commands/: __init__.py  cloth.py  mintmark.py  other.py  peak.py  pet.py  team.py
ironsbot/plugins/get_seer_info/depends/: __init__.py  db.py  headless.py  image.py
ironsbot/plugins/get_seer_info/render/: __init__.py  _cache.py  _common.py  peak_pool.py  peak_pool_vote.py  pet_info.py
ironsbot/plugins/get_seer_info/templates/: pet_info.html
ironsbot/plugins/get_seer_info/templates/_shared/: pet_cell.css  pet_cell_macro.html
ironsbot/plugins/get_seer_info/templates/peak_pool/: template.html
ironsbot/plugins/get_seer_info/templates/peak_pool_vote/: template.html
ironsbot/plugins/get_seer_info/templates/pet_info/: template.html
ironsbot/plugins/headless_seer/: command_id.py  exception.py  game.py  utils.py
ironsbot/plugins/headless_seer/core/: connect.py
ironsbot/plugins/headless_seer/packet/: codecs.py  fields.py  packet.py
ironsbot/plugins/headless_seer/packets/: __init__.py  peak.py  user.py
ironsbot/plugins/memes/: __init__.py  config.py  matchers.py
ironsbot/utils/: analyze_parser.py  cnb.py  image.py  parse_arg.py  rule.py
tests/: test_analyze_parser.py
